# simple-restaurant-api

./: .gitignore  Cargo.toml  readme.md
client/: Cargo.toml
client/config/: production.toml
client/src/: main.rs  order_type.rs  settings.rs  staff.rs  tablet.rs
server/: Cargo.toml
server/config/: production.toml
server/src/: cmd.rs  db.rs  main.rs  order_type.rs  settings.rs
src/: main.rs  staff.rs  tablet.rs
