[package]
name = "simple-restaurant-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.4"
rand = "0.8.4"