[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.51"
futures = "0.3"
tokio = { version = "1.10.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.4"
threadpool = "1.0"
rayon = "1.5.1"
surf = "2.3.1"
http-types = "2.12.0"
rand = "0.8.4"